# ATCBlockchain

./: .travis.yml  Chain_masternode_tool.spec  LICENSE  README.md
ATC/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  main.cpp  package.json
ATC-ui.id/: README.md  script.h
ATC-ui.id/consensus/: chainxconcensus.cpp
Cmake/: ChainDependencies.cmake  FindSolidity.cmake  TranderX  TxUno  UseDev.cmake
Cmake/Docker/: ATC-Debian  docker.file
Cmake/Docker/Chain-Derpox/: Dockerfile
Cmake/scripts/: install_deps.sh
Consensus/: consensus.go
Contracts/: Token Meta Data  chainx.sol
Contracts/ATCToken/: ATC_Token.sol
Contracts/Base/: MultiSigWallet.sol  SimpleCrowdsale.sol
Contracts/ICO/: CentrallyIssuedToken.sol  Crowdsale.sol
Maternodes/: ATC.conf  ATC.intf.py  LICENSE  README.md  chain-mnTax.sh
Maternodes/ATC-MN/: governance.h  rpcclient.cpp  rpcgovernance.cpp  rpcmasternode.cpp  rpcwallet.cpp
Maternodes/ATC-expolorer/: README.md  chain-mn.sh
Maternodes/ATC_Toutorial/: CHAINX_TUTORIAL.md  chainx.servers  docker-chainxd
Maternodes/SRC/: ATC-tx.cpp  ChainTest  MasternodesHosting  alertify.bootstrap.css  darksend.h
Wallet/Test/: wallet_tests.cpp
